syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package accounts_v1;

// Accounts service exposes operations for managing accounts.
service Accounts {
  // HealthCheck is a simple RPC to verify the service is up.
  rpc HealthCheck(google.protobuf.Empty) returns (google.protobuf.Empty);

  // CreateAccount creates a new account.
  // Returns the newly created account details.
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);

  // GetAccounts retrieves a list of accounts by their IDs.
  rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse);

  // GetAccount retrieves account by it's ID
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
}

// AccountStatus represents the current lifecycle state of an account.
enum AccountStatus {
  ACCOUNT_STATUS_UNSPECIFIED = 0;  // Default value, should not be used.
  ACCOUNT_STATUS_ACTIVE = 1;       // Account is active and can be used.
  ACCOUNT_STATUS_FROZEN = 2;       // Account is temporarily frozen.
  ACCOUNT_STATUS_CLOSED = 3;       // Account has been closed permanently.
}

// AccountType represents the type/category of the account.
enum AccountType {
  ACCOUNT_TYPE_UNSPECIFIED = 0;   // Default value, should not be used.
  ACCOUNT_TYPE_CUSTOMER = 1;      // Account belongs to a customer.
  ACCOUNT_TYPE_MERCHANT = 2;      // Account belongs to a merchant.
  ACCOUNT_TYPE_SYSTEM = 3;        // System-owned account for internal use.
}

// Account represents a single account entity in the system.
message Account {
  string id = 1;                     // Unique identifier for the account.
  string name = 2;                   // Name of the account (not the owner).
  AccountType type = 3;              // Type of the account.
  AccountStatus status = 4;          // Current status of the account.
  string created_by = 5;             // Identifier of the entity that created the account.
  google.protobuf.Timestamp created_at = 6; // Timestamp when the account was created.
  google.protobuf.Timestamp updated_at = 7; // Timestamp when the account was last updated.
}

// CreateAccountRequest is the input for creating a new account.
message CreateAccountRequest {
  string name = 1;                   // Name of the account to be created.
  AccountType type = 2;              // Type of the account.
  string created_by = 3;             // Identifier of the entity creating this account.
}

// CreateAccountResponse returns the details of the newly created account.
message CreateAccountResponse {
  Account account = 1;               // Newly created account object.
}

// GetAccountsRequest is used to fetch multiple accounts by IDs.
message GetAccountsRequest {
  // Filter species what filters to applied when fetching accounts from database
  message Filter {
    repeated string account_ids = 1;   // List of account IDs to retrieve.
    AccountType account_type = 2;
    AccountStatus account_status = 3;
  }

  Filter filter = 1;
}

// GetAccountsResponse contains the list of accounts returned by GetAccountsRequest.
message GetAccountsResponse {
  repeated Account accounts = 1;     // Accounts matching the requested IDs.
}

message GetAccountRequest {
  string account_id = 1;
}

// GetAccountResponse contains the account returned.
message GetAccountResponse {
  Account account = 1;     // Account matching the requested IDs.
}